Correction du texte dans index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <section id="histoire">
         <h2>Histoire de l'Islam</h2>
-        <p>L'Islam est apparu au 7ème siècle en Arabie avec la révélation reçue par le prophète Mohamed. Il s'est rapidement répandu au Moyen-Orient, en Afrique du Nord et en Asie.</p>
+        <p>L'Islam est apparu au 7ème siècle en Arabie avec la révélation reçue par le prophète Muhammad saws. Il s'est rapidement répandu au Moyen-Orient, en Afrique du Nord et en Asie.</p>
         <div class="image-container">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/Kaaba_Masjid_al-Haram.jpg" alt="La Kaaba à La Mecque">
         </div>
@@ -99,7 +99,7 @@
 
     <section id="croyances">
         <h2>Les Croyances</h2>
-        <p>Les musulmans croient en un Dieu unique, Allah, et suivent les enseignements du prophète Mohamed consignés dans le Coran. Les cinq piliers de l'Islam guident la vie spirituelle et morale des croyants.</p>
+        <p>Les musulmans croient en un Dieu unique, Allah, et suivent les enseignements du prophète Muhammad saws consignés dans le Coran. Les cinq piliers de l'Islam guident la vie spirituelle et morale des croyants.</p>
         <div class="image-container">
             <img src="https://upload.wikimedia.org/wikipedia/commons/9/9d/Quran_cover.jpg" alt="Le Coran">
         </div>
@@ -125,6 +125,7 @@
 </body>
 </html>
 python -m http.server 8000
+
 
 
 
